add bonus tasks

--- a/css/style.sass
+++ b/css/style.sass
@@ -25,6 +25,10 @@ img
 .panel-footer a:hover
     color: $blueLight
     
+.rtng
+    font-size: 2em
+    color: #CFB53B
+
 #footer-center
     text-align: center
 
